# h5cpp

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  CMakeLists.txt.autosave  CMakeSettings.json  Jenkinsfile  README.md  boost.uml  build-with-meson.md  build_with_meson.md  conan.cmake  conanfile.py  conanfile.txt  conanfile_1.12.0.txt  conanfile_default.txt  conanfile_desi.txt  conanfile_ess.txt  conanfile_ess_mpi.txt  conanfile_eugen.txt  conanfile_macos.txt  conanfile_public.txt  conanfile_windows_ess.txt  expectscript  genindex.html  h5cpp-config.cmake  h5cpp-config.cmake.in  index.html  meson.build  meson_options.txt  objects.inv  pixi.toml  push_to_repo.sh  redirect_coverage.sh  search.html  searchindex.js
doc/: CMakeLists.txt  Doxyfile.in  Makefile  groups.dox  mainpage.dox  style_guide.txt  users_guide.dox
doc/capi_coverage/: tally.sh
doc/design/: cpp.profile.di  cpp.profile.uml  hdf5_c_api.uml  model.notation  model.uml  stdcpp.uml
doc/source/: CMakeLists.txt  UML.dia  attributes.rst  classes.rst  conf.py.in  datasets.rst  index.rst.in  users_guide.dox
examples/: CMakeLists.txt  Readme.md  append_scalar_data.cpp  append_vector_data.cpp  basic_files.cpp  complex.hpp  complex_io.cpp  frame_buffer.hpp  frame_buffer_h5.hpp  image_h5.hpp  meson.build  node_builder.hpp  read_dataset.cpp  rgbpixel.cpp  rgbpixel.hpp  rgbpixel_h5.hpp  selecting_datasets.cpp  std_vector_io.cpp  swmr_builder.hpp  vector.hpp  vector_h5.hpp  write_read_vector.cpp  write_single_vector.cpp  write_vector_list.cpp  writing_complex.cpp  writing_image.cpp
examples/attributes/: CMakeLists.txt  attribute_creation.cpp  attribute_io.cpp  attribute_iteration.cpp
examples/hdfgroup/: CMakeLists.txt
examples/mpi/: CMakeLists.txt  writer.cpp  writer_extend.cpp
examples/swmr/: CMakeLists.txt  swmr_builder.cpp  swmr_builder.hpp  swmr_environment.cpp  swmr_environment.hpp  swmr_reader.cpp  swmr_write.cpp
examples/useage/: CMakeLists.txt  app.cpp  core.cpp  core.hpp
experiments/: CMakeLists.txt  main.cpp  object_id.h
src/: CMakeLists.txt  context.cpp  context.hpp  creation_order.cpp  datatype.cpp  datatype.hpp  file_access_property_list.cpp  file_creation_property_list.cpp  global.cpp  global.h  group_access_property_list.cpp  group_creation_property_list.cpp  id.cpp  id.h  id.hpp  iterator.cpp  iterator_config.cpp  link_creation_order.cpp  main.cpp  object_creation_property_list.cpp  object_handle.cpp  object_handle.hpp  object_id.cpp  object_id.hpp  path.cpp  property_list.cpp  property_list.hpp  property_list_class.cpp  property_list_class.hpp  windows.hpp
src/attribute/: CMakeLists.txt  attribute.cpp  attribute_iterator.cpp  attribute_manager.cpp  attribute_manager.hpp
src/core/: CMakeLists.txt  context.cpp  iterator_config.cpp  object_id.cpp
src/dataspace/: CMakeLists.txt  dataspace.cpp  scalar.cpp  selection.cpp  simple.cpp  type.cpp  type.hpp  view.cpp
src/datatype/: CMakeLists.txt  array.cpp  compound.cpp  copy_native_type.cpp  datatype.cpp  float.cpp  float.hpp  integer.cpp  string.cpp
src/error/: CMakeLists.txt  error.cpp
src/file/: CMakeLists.txt  direct_driver.cpp  file.cpp  functions.cpp  memory_driver.cpp  mpi_driver.cpp  posix_driver.cpp  types.cpp
src/filter/: CMakeLists.txt  deflate.cpp  filter.cpp  fletcher32.cpp  shuffle.cpp
src/h5cpp/: CMakeLists.txt  h5cpp.hpp  h5cpp.pc.in  hdf5.hpp  meson.build  nexus.hpp  stl.hpp
src/include/: CMakeLists.txt
src/node/: CMakeLists.txt  dataset.cpp  functions.cpp  group.cpp  link.cpp  link.hpp  link_iterator.cpp  link_view.cpp  node.cpp  node.hpp  node_iterator.cpp  node_view.cpp  types.cpp  utilities.cpp  utilities.hpp
src/property/: CMakeLists.txt  attribute_creation.cpp  attribute_creation_list.cpp  class.cpp  dataset_access.cpp  dataset_access_list.cpp  dataset_creation.cpp  dataset_creation_list.cpp  dataset_transfer_list.cpp  datatype_access.cpp  datatype_access_list.cpp  file_access.cpp  file_access.hpp  file_creation.cpp  file_mount.cpp  file_mount_list.cpp  group_access.cpp  group_creation.cpp  link_access.hpp  link_access_list.cpp  link_creation.hpp  link_creation_list.cpp  list.cpp  object_copy.cpp  object_copy_list.cpp  object_creation.cpp  property_list.cpp  string_creation.cpp  string_creation.hpp  string_creation_list.cpp  type_creation.cpp  type_creation_list.cpp  virtual_data_map.cpp
test/: CMakeLists.txt  boost_to_gtest  create_h5py_test_fixed_size_string_dataset.py  create_h5py_test_string_attributes.py  create_h5py_testboolattr.py  create_h5py_testdata.py  create_pniio_testboolattr.py  fixture.cpp  fixture.hpp  gpath_test.cpp  gtest_print.hpp  h5cpp_test_helpers.hpp  h5py_test_boolattr.h5  h5py_test_data.h5  h5py_test_fixed_size_string_datasets.h5  h5py_test_string_attributes.h5  image.cpp  image.hpp  iteration_index_test.cpp  iteration_order_test.cpp  iteration_order_test.hpp  iterator_test.cpp  main.cpp  meson.build  object_id_test.cpp  path_test.cpp  path_test.hpp  pniio_test_boolattr.h5  replace.sh  utilities.hpp
test/ObjectHandle/: CMakeLists.txt  ObjectHandleDefault.cpp  ObjectHandleFixture.hpp  attribute_object_handle_test.cpp  dataset_object_handle_test.cpp  dataspace_object_handle_test.cpp  datatype_object_handle_test.cpp  error_objects_handle_test.cpp  file_object_handle_test.cpp  group_object_handle_test.cpp  object_handle_test.cpp  object_handle_test.hpp  property_objects_handle_test.cpp  test_environment.cpp
test/attribute/: CMakeLists.txt  attribute_close_io_test.cpp  attribute_complex_io_test.cpp  attribute_fixed_string_io.cpp  attribute_h5py_bool_test.cpp  attribute_management_test.cpp  attribute_multidim_io_test.cpp  attribute_name_access_test.cpp  attribute_pniio_bool_test.cpp  attribute_read_io_test.cpp  attribute_scalar_io_test.cpp  attribute_test.cpp  attribute_test_fixtures.cpp  attribute_test_fixtures.hpp  attribute_variable_string_io.cpp  meson.build
test/core/: CMakeLists.txt  ObjectHandleDefault.cpp  attribute_object_handle_test.cpp  dataset_object_handle_test.cpp  dataspace_object_handle_test.cpp  datatype_object_handle_test.cpp  iteration_index_test.cpp  (+14 more)
(+16493 files in other folders)
